--- a/copyright.html
+++ b/copyright.html
@@ -1,26 +1,24 @@
 <!DOCTYPE html>
 <html>
-  <link
-    rel="stylesheet"
-    type="text/css"
-    href="//undertalefonts.duodecima.technology/webfonts/stylesheet.css"
-  />
   <style>
     body {
-      background-color: black;
+      background-color: rgb(7, 6, 32);
     }
     h1 {
       color: white;
+      font-family: "Courier New", Courier, monospace;
     }
     h2 {
       color: white;
-      font-family: "Determination Mono";
+      font-family: "Courier New", Courier, monospace;
     }
     h3 {
       color: white;
+      font-family: "Courier New", Courier, monospace;
     }
     p {
       color: white;
+      font-family: "Courier New", Courier, monospace;
     }
   </style>
   <title>UNDERTALE</title>
