--- a/info.html
+++ b/info.html
@@ -1,19 +1,52 @@
 <!DOCTYPE html>
 <html>
     <title>UNDERTALE</title>
-    <h1 style="text-align:left"> <a href="index.html"><img src="https://media.istockphoto.com/id/1465105163/vector/vector-icon-black-silhouette-arrow-leftside.jpg?s=612x612&w=0&k=20&c=KUv8BU5nD-RNHQCQNfg6OXKyeNrt9Uz6mK0GAurD37I=" alt="back" width="50" height="50"></a></h1>
+    <style>
+        body {
+            background-color: #070620;
+        }
+        
+        h1 {
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        h2 {
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        h3 {
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+        p {
+            color: white;
+            font-family: 'Courier New', Courier, monospace;
+        }
+    </style>
+    <h1 style="text-align:left"> <a href="index.html"><img src="backArrow.png" width="50" height="50"></a></h1>
     <h1 style="text-align:center">Information
     <body>
-        <p></p>
-        <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTD5Q3hKqYLrspfxqZIuC6MCHMYf6diqCAKw&s" alt="Ruins" width="150" height="350">
-        <h3><p></p></h3>
-        <ul>
-            <h2>The Ruins</h2>
-            <li>The first section of the game is the Ruins. This is where you meet Toriel, the goat-woman caretaker that guides you through. This is the introductory area of the game and it teaches you basic mechanics and how to win fights peacefully (or violently... if you dare).</li>
-        </ul>	
         <p>
         <h1 style="text-align:center">
-            <img src="https://i.pinimg.com/736x/b3/a9/0f/b3a90f2a24ea910183b1e83814ec9354.jpg" alt="Snowdin" width="300" height="300">
+
+        <img src="https://i.redd.it/8e3jngas4zce1.jpeg" alt="Ruins" width="300" height="350">
+        <p style="color: white">
+        </p>
+        </h1>
+        <ul>
+            <h2>The Ruins</h2>
+            <li style="color: white">The first section of the game is the Ruins. This is where you meet Toriel, the goat-woman caretaker that guides you through. This is the introductory area of the game.</li>
+        </ul>	
+        </p>
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        </p>
+        <h1 style="text-align:center">
+            <img src="https://images.steamusercontent.com/ugc/923668160618604611/B5C287E3F24EAF0C3C49E0B4AC4E54F11B162DA2/?imw=512&&ima=fit&impolicy=Letterbox&imcolor=%23000000&letterbox=false" alt="Snowdin" width="500" height="300">
         </h1>
         </p>
         <h3 style="text-align:left">
@@ -23,8 +56,14 @@
         </ul>
 
         <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        </p>
         <h1 style="text-align:center">
-            <img src="https://pm1.aminoapps.com/6455/3a97f8a794d4dd215e40307d77f7f02eb85bf7c7_hq.jpg" alt="Waterfall" width="400" height="444">
+            <img src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEj-6o63C44dq11k6LftMu7qU578908rcUdSbC7xWPlg1iJUPZe1hNKJXgjb32yYy1eYQKE917n6sjkmcI8i0fhTOf6WOHTJ88-mV2QPkA5ZqnI0G184i3v821TdMn3oeKC9VgK-tiNT1Mg/w680/Screen+Shot+2015-10-01+at+4.36.04+PM.png" alt="Waterfall" width="400" height="360">
         </h1>
         </p>
         <h3 style="text-align:left">
@@ -34,8 +73,14 @@
         </ul>
 
         <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        </p>
         <h1 style="text-align:center">
-            <img src="https://pm1.aminoapps.com/6316/3b93408fd25421bd00433d3633ff1d82c924b7ca_00.jpg" alt="Hotland" width="300" height="322">
+            <img src="https://external-preview.redd.it/c-o0YtwrH28j0Qf1YXswY_EPT4Lzxpoicg_tLtITMuM.jpg?auto=webp&s=132b5a8e580396e5ff1b649f142554f15e7e645b" alt="Hotland" width="500" height="322">
         </h1>
         </p>
         <h3 style="text-align:left">
@@ -45,8 +90,14 @@
         </ul>
 
         <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        </p>
         <h1 style="text-align:center">
-            <img src="https://preview.redd.it/mettaton-mettaton-neo-sprite-art-v0-onxsr5drg83f1.png?width=661&format=png&auto=webp&s=15d4e83a459fbd1bc23dc055259e4096136d8479" alt="The Core" width="400" height="444">
+            <img src="https://static.wikia.nocookie.net/undertale/images/7/7d/CORE_location_entrance.png" alt="The Core" width="400" height="444">
         </h1>
         </p>
         <h3 style="text-align:left">
@@ -56,8 +107,14 @@
         </ul>
 
         <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        <p>
+            &nbsp;
+        </p>
         <h1 style="text-align:center">
-            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSv33S8n9miFMgPbL5q65dtpJP0wn7kg2ZZjK2Yi7wO9VMNZ83rl7gJSGYqWXOvYGxWE_s&usqp=CAU" alt="New Home" width="500" height="537">
+            <img src="https://i.pinimg.com/1200x/8a/38/04/8a38048b9ff5ac0016e5ef77fb4d4592.jpg" alt="New Home" width="500" height="450">
         </h1>
         </p>
         <h3 style="text-align:left">
