--- a/fanbase.html
+++ b/fanbase.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html>
   <title>UNDERTALE</title>
+  <style>
+    body {
+      background-color: #070620;
+    }
+
+    h1 {
+      color: white;
+      font-family:'Courier New', Courier, monospace;
+    }
+    h2 {
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+    }
+    h3 {
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+    }
+    p {
+      color: white;
+      font-family: 'Courier New', Courier, monospace;
+    }
+  </style>
   <body>
     <h1 style="text-align: left">
       <a href="index.html"
         ><img
-          src="https://media.istockphoto.com/id/1465105163/vector/vector-icon-black-silhouette-arrow-leftside.jpg?s=612x612&w=0&k=20&c=KUv8BU5nD-RNHQCQNfg6OXKyeNrt9Uz6mK0GAurD37I="
+          src="backArrow.png"
           alt="back"
           width="50"
           height="50"
