--- a/Lighc.html
+++ b/Lighc.html
@@ -1,6 +1,6 @@
 <DOCTYPE HTML!>
   <html>
-    <Body>
-      Hi guys this is html wowwwww!!!!
-    </Body>
+    <body>
+      What is this?
+    </body>
   </html>
