--- a/copyright.html
+++ b/copyright.html
@@ -34,7 +34,7 @@
     </h3>
 
     <p>
-      “UNDERTALE,” including all original characters, storylines, dialogue,
+      1. “UNDERTALE,” including all original characters, storylines, dialogue,
       artwork, music, sound effects, and associated intellectual property, is
       the copyrighted work of Toby Fox (the “Creator”) and is protected under
       international copyright and trademark laws. All rights not expressly
@@ -47,8 +47,8 @@
       or physical goods that use UNDERTALE characters, logos, or distinctive
       visual elements. The UNDERTALE logo, name, and original characters (such
       as Frisk, Sans, Papyrus, Toriel, Undyne, Alphys, Flowey, and Asgore) are
-      trademarks or trademark-like elements belonging to the Creator. 2. Fan
-      Works & Community Creations The Creator recognizes and deeply values the
+      trademarks or trademark-like elements belonging to the Creator. 
+      2. Fan Works & Community Creations The Creator recognizes and deeply values the
       enthusiasm of the UNDERTALE community. Fan works are an important part of
       what makes UNDERTALE special, and the following permissions are granted,
       so long as they respect the spirit and integrity of the original work. You
@@ -67,7 +67,8 @@
       copies of the game, soundtrack, or assets. If you want to use UNDERTALE
       content in a commercial capacity (e.g., licensed merchandise, paid
       adaptations, or collaborations), please contact the Creator for
-      permission. 3. Streaming, Let’s Plays, and Monetized Content Monetized
+      permission. 
+      3. Streaming, Let’s Plays, and Monetized Content Monetized
       streaming or video content (e.g., Let’s Plays, reviews, or commentary
       videos on YouTube, Twitch, etc.) is explicitly allowed, as long as: The
       content provides original commentary or creative input (not just gameplay
@@ -83,12 +84,14 @@
       commentary. Properly credit the original work when referencing or adapting
       its elements. Preservationists and archivists may include UNDERTALE in
       nonprofit game preservation initiatives, provided it is not distributed
-      for free download outside authorized stores. 5. Respect and Spirit of Use
+      for free download outside authorized stores. 
+      5. Respect and Spirit of Use
       UNDERTALE was created with love, sincerity, and humor. Fans are encouraged
       to celebrate the game’s spirit of kindness and creativity. The Creator
       reserves the right to request removal or modification of fan works that
       are harmful, offensive, or misrepresentative of UNDERTALE’s themes or
-      characters. 6. Legal Note Nothing in this notice constitutes a waiver of
+      characters. 
+      6. Legal Note Nothing in this notice constitutes a waiver of
       the Creator’s legal rights. This policy is intended to promote a healthy,
       respectful fan community and is subject to revision. By creating or
       sharing UNDERTALE-related fan works, you agree to abide by these terms.
@@ -98,3 +101,4 @@
     </p>
   </body>
 </html>
+
