--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
-		<h3>Undertale is an amazing indie RPG made by Toby Fox in 2015.
+		<h3 style="text-align:center">Undertale is an amazing indie RPG made by Toby Fox in 2015.
 		<p>
 		<img src="https://i.redd.it/7ox1et0f5t3f1.png" alt="frisk" 
 		   width="200" height="220">
@@ -43,3 +43,4 @@
 		</ul>
 	</body>
 </html>
+
