--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
 		}
 		h3 {
 			color: white;
-			font-family: 'Courier New', Courier, monospace;	
+			font-family: 'Courier New', Courier, monospace;
+			text-align: center;
 		}
 		p {
 			color: white;
@@ -43,4 +44,5 @@
 		</ul>
 	</body>
 </html>
+
 
