--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
 			color: white;
 			font-family: 'Courier New', Courier, monospace;
 		}
+		
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
@@ -36,13 +37,14 @@
 		   width="140" height="220">
 		<h2>
 		<ul>
-			<li><a href="https://undertale.com/">Official Website</a></li>
-			<li><a href="info.html">Learn more</a></li>
-			<li><a href="fanbase.html">Fanbase</a></li>
-			<li><a href="copyright.html">Copyright</a></li>
+			<li style="text-align:center"><a href="https://undertale.com/">Official Website</a></li>
+			<li style="text-align:center"><a href="info.html">Learn more</a></li>
+			<li style="text-align:center"><a href="fanbase.html">Fanbase</a></li>
+			<li style="text-align:center"><a href="copyright.html">Copyright</a></li>
 
 		</ul>
 	</body>
 </html>
+
 
 
