--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
 			color: white;
 			font-family: 'Courier New', Courier, monospace;
 		}
+		ul {
+  			list-style-type: none;
+		}
 		
 	</style>
 	<h1 style="text-align:center">UNDERTALE
@@ -45,6 +48,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
