--- a/index.html
+++ b/index.html
@@ -1,30 +1,33 @@
 <html>
 	<title>UNDERTALE</title>
 	<style>
+		@font-face {
+    	 font-family: DTM-Sans;
+    	 src: url("DTM-Sans.otf") format("opentype");
 		body {
 			background-color: #070620;
 		}
 		h1 {
 			color: white;
-			font-family: 'Courier New', Courier, monospace;
+			font-family: 'DTM-Sans';
 		}
 		h2 {
 			color: white;
-			font-family: 'Courier New', Courier, monospace;
+			font-family: 'DTM-Sans';
 		}
 		h3 {
 			color: white;
-			font-family: 'Courier New', Courier, monospace;
+			font-family: 'DTM-Sans';
 			text-align: center;
 		}
 		p {
 			color: white;
-			font-family: 'Courier New', Courier, monospace;
+			font-family: 'DTM-Sans';
 		}
 		ul {
   			list-style-type: none;
 		}
-		
+
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
@@ -48,6 +51,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
