--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<style>
 		@font-face {
     	 font-family: DTM-Sans;
-    	 src: url("DTM-Sans.otf") format("opentype");
+    	 src: url("DTM-Sans.otf");
 		body {
 			background-color: #070620;
 		}
@@ -51,6 +51,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
