--- a/index.html
+++ b/index.html
@@ -2,27 +2,28 @@
 	<title>UNDERTALE</title>
 	<style>
 		@font-face {
-    	 font-family: DTM-Sans;
-    	 src: url("DTM-Sans.otf");
+    		font-family: Determination;
+   	 		src: url(DTM-Sans.otf);
+		}
 		body {
 			background-color: #070620;
 		}
 		h1 {
 			color: white;
-			font-family: 'DTM-Sans';
+			font-family: 'Determination';
 		}
 		h2 {
 			color: white;
-			font-family: 'DTM-Sans';
+			font-family: 'Determination';
 		}
 		h3 {
 			color: white;
-			font-family: 'DTM-Sans';
+			font-family: 'Determination';
 			text-align: center;
 		}
 		p {
 			color: white;
-			font-family: 'DTM-Sans';
+			font-family: 'Determination';
 		}
 		ul {
   			list-style-type: none;
@@ -51,6 +52,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
