--- a/info.html
+++ b/info.html
@@ -22,6 +22,9 @@
             color: white;
             font-family: 'Courier New', Courier, monospace;
         }
+		ul {
+  			list-style-type: none;
+		}
     </style>
     <h1 style="text-align:left"> <a href="index.html"><img src="backArrow.png" width="50" height="50"></a></h1>
     <h1 style="text-align:center">Information
@@ -125,3 +128,4 @@
 
     </body>
 </html>
+
