--- a/info.html
+++ b/info.html
@@ -36,10 +36,10 @@
         <p style="color: white">
         </p>
         </h1>
-        <ul>
+        <ul list-style-type: none;>
             <h2>The Ruins</h2>
             <li style="color: white">The first section of the game is the Ruins. This is where you meet Toriel, the goat-woman caretaker that guides you through. This is the introductory area of the game.</li>
-        </ul>	
+		</ul>	
         </p>
         <p>
             &nbsp;
@@ -53,7 +53,7 @@
         </h1>
         </p>
         <h3 style="text-align:left">
-        <ul>
+        <ul list-style-type: none;>
             <h2>Snowdin</h2>
             <li>Progressing further leads you to Snowdin, an area covered in snow (Hence the name). Here is where you meet Sans the Jokester Skeleton and his brother Papyrus. They'll give you some information on how to get home.</li>
         </ul>
@@ -70,7 +70,7 @@
         </h1>
         </p>
         <h3 style="text-align:left">
-        <ul>
+        <ul list-style-type: none;>
             <h2>Waterfall</h2>
             <li>Waterfall is an area with water, hidden paths, and new characters. It focuses more on exploration and puzzles than combat. Undyne is here and she is a fish-like monster who is determined to stop you progressing.</li>
         </ul>
@@ -104,7 +104,7 @@
         </h1>
         </p>
         <h3 style="text-align:left">
-        <ul>
+        <ul list-style-type: none;>
             <h2>The Core</h2>
             <li>The Core is a high-tech facility with challenging monster encounters and many lore drops. There are advanced puzzles and this is the bridge to the end of the game. You find Mettaton here, a dramatic robot who wants to kill you?</li>
         </ul>
@@ -121,11 +121,12 @@
         </h1>
         </p>
         <h3 style="text-align:left">
-        <ul>
+        <ul list-style-type: none;>
             <h2>New Home</h2>
             <li>New Home is the final area that brings the endings of the game. Player choices through the regions change the ending here, but in the "Pacifist Route" You fight and spare the monster king Asgore.</li>
         </ul>
 
     </body>
 </html>
+
 
