--- a/info.html
+++ b/info.html
@@ -36,6 +36,7 @@
         <p style="color: white">
         </p>
         </h1>
+		<h3 style="text-align:left">
         <ul list-style-type: none;>
             <h2>The Ruins</h2>
             <li style="color: white">The first section of the game is the Ruins. This is where you meet Toriel, the goat-woman caretaker that guides you through. This is the introductory area of the game.</li>
@@ -128,5 +129,6 @@
 
     </body>
 </html>
+
 
 
