--- a/info.html
+++ b/info.html
@@ -13,6 +13,7 @@
         h2 {
             color: white;
             font-family: 'Courier New', Courier, monospace;
+			text-align: center;
         }
         h3 {
             color: white;
@@ -129,6 +130,7 @@
 
     </body>
 </html>
+
 
 
 
