--- a/info.html
+++ b/info.html
@@ -2,26 +2,30 @@
 <html>
     <title>UNDERTALE</title>
     <style>
+		@font-face {
+    		font-family: Determination;
+   	 		src: url(DTM-Sans.otf);
+		}
         body {
             background-color: #070620;
         }
         
         h1 {
             color: white;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Determination';
         }
         h2 {
             color: white;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Determination';
 			text-align: center;
         }
         h3 {
             color: white;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Determination'
         }
         p {
             color: white;
-            font-family: 'Courier New', Courier, monospace;
+            font-family: 'Determination';
         }
 		ul {
   			list-style-type: none;
@@ -130,6 +134,7 @@
 
     </body>
 </html>
+
 
 
 
