--- a/copyright.html
+++ b/copyright.html
@@ -1,24 +1,28 @@
 <!DOCTYPE html>
 <html>
   <style>
+    @font-face {
+    		font-family: Determination;
+   	 		src: url(DTM-Sans.otf);
+		}
     body {
       background-color: rgb(7, 6, 32);
     }
     h1 {
       color: white;
-      font-family: "Courier New", Courier, monospace;
+      font-family: "Determination";
     }
     h2 {
       color: white;
-      font-family: "Courier New", Courier, monospace;
+      font-family: "Determination";
     }
     h3 {
       color: white;
-      font-family: "Courier New", Courier, monospace;
+      font-family: "Determination";
     }
     p {
       color: white;
-      font-family: "Courier New", Courier, monospace;
+      font-family: "Determination";
     }
   </style>
   <title>UNDERTALE</title>
@@ -47,7 +51,9 @@
       or physical goods that use UNDERTALE characters, logos, or distinctive
       visual elements. The UNDERTALE logo, name, and original characters (such
       as Frisk, Sans, Papyrus, Toriel, Undyne, Alphys, Flowey, and Asgore) are
-      trademarks or trademark-like elements belonging to the Creator. 
+      trademarks or trademark-like elements belonging to the Creator.
+    </p>
+    <p>
       2. Fan Works & Community Creations The Creator recognizes and deeply values the
       enthusiasm of the UNDERTALE community. Fan works are an important part of
       what makes UNDERTALE special, and the following permissions are granted,
@@ -67,7 +73,9 @@
       copies of the game, soundtrack, or assets. If you want to use UNDERTALE
       content in a commercial capacity (e.g., licensed merchandise, paid
       adaptations, or collaborations), please contact the Creator for
-      permission. 
+      permission.
+    </p>
+    <p>
       3. Streaming, Let’s Plays, and Monetized Content Monetized
       streaming or video content (e.g., Let’s Plays, reviews, or commentary
       videos on YouTube, Twitch, etc.) is explicitly allowed, as long as: The
@@ -76,6 +84,8 @@
       not falsely claim affiliation with or endorsement from Toby Fox. You may
       also use UNDERTALE’s music in streams or videos as part of gameplay or
       review, but uploading isolated soundtracks or OST rips is not permitted.
+    </p>
+    <p>
       4. Preservation, Modding, and Technical Guidelines Modding UNDERTALE for
       personal or educational use is allowed, and the community is encouraged to
       explore creative experimentation — provided you: Do not distribute paid or
@@ -84,13 +94,17 @@
       commentary. Properly credit the original work when referencing or adapting
       its elements. Preservationists and archivists may include UNDERTALE in
       nonprofit game preservation initiatives, provided it is not distributed
-      for free download outside authorized stores. 
+      for free download outside authorized stores.
+    </p>
+    <p>
       5. Respect and Spirit of Use
       UNDERTALE was created with love, sincerity, and humor. Fans are encouraged
       to celebrate the game’s spirit of kindness and creativity. The Creator
       reserves the right to request removal or modification of fan works that
       are harmful, offensive, or misrepresentative of UNDERTALE’s themes or
-      characters. 
+      characters.
+    </p>
+    <p>
       6. Legal Note Nothing in this notice constitutes a waiver of
       the Creator’s legal rights. This policy is intended to promote a healthy,
       respectful fan community and is subject to revision. By creating or
@@ -101,4 +115,5 @@
     </p>
   </body>
 </html>
+
 
