--- a/fanbase.html
+++ b/fanbase.html
@@ -2,25 +2,28 @@
 <html>
   <title>UNDERTALE</title>
   <style>
+    @font-face {
+    		font-family: Determination;
+   	 		src: url(DTM-Sans.otf);
     body {
       background-color: #070620;
     }
 
     h1 {
       color: white;
-      font-family:'Courier New', Courier, monospace;
+      font-family:'Determination';
     }
     h2 {
       color: white;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Determination'
     }
     h3 {
       color: white;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Determination';
     }
     p {
       color: white;
-      font-family: 'Courier New', Courier, monospace;
+      font-family: 'Determination';
     }
   </style>
   <body>
@@ -89,3 +92,4 @@
     </p>
   </body>
 </html>
+
