--- a/fanbase.html
+++ b/fanbase.html
@@ -16,6 +16,7 @@
     h2 {
       color: white;
       font-family: 'Determination'
+      text-align: center;
     }
     h3 {
       color: white;
@@ -24,6 +25,9 @@
     p {
       color: white;
       font-family: 'Determination';
+    }
+    img {
+      text-align: center;
     }
   </style>
   <body>
@@ -92,4 +96,5 @@
     </p>
   </body>
 </html>
+
 
