--- a/fanbase.html
+++ b/fanbase.html
@@ -26,6 +26,12 @@
       color: white;
       font-family: 'Determination';
     }
+    img {
+      display: block;
+      margin: auto;
+      width: 50%;
+}
+    }
   </style>
   <body>
     <h1 style="text-align: left">
@@ -93,6 +99,7 @@
     </p>
   </body>
 </html>
+
 
 
 
