--- a/fanbase.html
+++ b/fanbase.html
@@ -1,77 +1,54 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
-    <meta charset="utf-8" />
     <title>UNDERTALE</title>
     <style>
       @font-face {
-        font-family: "Determination";
-        src: url("DTM-Sans.otf") format("opentype");
-        font-weight: normal;
-        font-style: normal;
-        font-display: swap;
+        font-family: Determination;
+        src: url(DTM-Sans.otf);
       }
-
       body {
         background-color: #070620;
-        margin: 0;
       }
 
-      h1, h2, h3, p {
-        color: #fff;
-        font-family: "Determination", sans-serif;
+      h1 {
+        color: white;
+        font-family:'Determination';
       }
-
-      h1 { text-align: center; }
-      h1.left { text-align: left; }
-
       h2 {
+        color: white;
+        font-family: 'Determination';
         text-align: center;
       }
-
       h3 {
-        text-align: center;
-        max-width: 900px;
-        margin: 0 auto;
+        color: white;
+        font-family: 'Determination';
       }
-
-      .back {
-        display: inline-block;
+      p {
+        color: white;
+        font-family: 'Determination';
       }
-
-      img {
-        display: block;
-        margin: 0 auto;
-      }
-
-      ul {
-        color: #fff;
-        font-family: "Determination", sans-serif;
-        max-width: 800px;
-        margin: 0 auto;
-      }
-
-      a { color: #9bdcff; }
     </style>
   </head>
   <body>
-    <h1 class="left">
-      <a class="back" href="index.html">
-        <img src="backArrow.png" alt="back" width="50" height="50" />
-      </a>
+    <h1 style="text-align: left">
+      <a href="index.html"
+        ><img
+          src="backArrow.png"
+          alt="back"
+          width="50"
+          height="50"
+      /></a>
     </h1>
+    <h1 style="text-align: center">Fanbase</h1>
 
-    <h1>Fanbase</h1>
-
-    <h3>
+    <h3 style="text-align: center">
       The Undertale fanbase is one of the main reasons why the game has remained
       popular over many years. The community is one of the most creative and
       passionate fandoms. Here are some of my favourite creations from the
       Undertale fanbase:
     </h3>
-
     <p>&nbsp;</p>
-
     <h2>Bad Time Simulator</h2>
     <img
       src="https://slm-assets.secondlife.com/assets/13910104/lightbox/maxresdefault.jpg?1461089042"
@@ -79,16 +56,14 @@
       width="400"
       height="230"
     />
-    <p style="text-align:center;">
+    <p>
       Bad Time Simulator is an emulator that can be played on your web browser
       with a keyboard. It emulates one of the most iconic fights in Undertale,
       with Sans the Skeleton. The link to play it is
       <a href="https://jcw87.github.io/c2-sans-fight">here</a>, and the source
       code is on github.
     </p>
-
     <p>&nbsp;</p>
-
     <h2>Flowey's Time Machine</h2>
     <img
       src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmIis1prHthRjhPa99Gzbj1jQjVRdD8-8RAA&s"
@@ -96,15 +71,13 @@
       width="290"
       height="230"
     />
-    <p style="text-align:center;">
+    <p>
       Flowey's Time Machine is an unofficial save editor for Undertale. You can
       change multiple aspects of your save file and even generate new ones. The
       link to use it is
       <a href="https://crumblingstatue.github.io/FloweysTimeMachine">here</a>.
     </p>
-
     <p>&nbsp;</p>
-
     <h2>Undertale mods</h2>
     <img
       src="https://i.redd.it/cisd1u06e3t11.png"
@@ -113,18 +86,9 @@
       height="225"
     />
     <ul>
-      <li>
-        <a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> —
-        This is an online multiplayer mod that works through Steam.
-      </li>
-      <li>
-        <a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> —
-        Adds color to the original black and white sprites.
-      </li>
-      <li>
-        <a href="https://www.romhacking.net/utilities/704">Delta Patcher</a> —
-        A tool to help install mods.
-      </li>
+      <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> This is a online multplayer mod that works through Steam.</li>
+      <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> This mod adds color to the original black and white sprites. It adds a nice touch.</li>
+      <li><a href="https://www.romhacking.net/utilities/704">Delta Patcher</a> This is not really a mod, but a tool to help install them.</li>
     </ul>
   </body>
 </html>
