Fix HTML structure and update back arrow image

--- a/fanbase.html
+++ b/fanbase.html
@@ -27,6 +27,7 @@
     <h1 style="text-align: left">
       <a href="index.html"
         ><img
+          src="https://media.istockphoto.com/id/1465105163/vector/vector-icon-black-silhouette-arrow-leftside.jpg?s=612x612&w=0&k=20&c=KUv8BU5nD-RNHQCQNfg6OXKyeNrt9Uz6mK0GAurD37I="
           src="backArrow.png"
           alt="back"
           width="50"
