--- a/fanbase.html
+++ b/fanbase.html
@@ -28,6 +28,11 @@
         color: white;
         font-family: 'Determination';
       }
+      .center-image {
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+      }
     </style>
   </head>
   <body>
@@ -55,6 +60,7 @@
       alt="bad time sim"
       width="400"
       height="230"
+      class="center-image"
     />
     <p>
       Bad Time Simulator is an emulator that can be played on your web browser
@@ -70,6 +76,7 @@
       alt="flowey's time machine"
       width="290"
       height="230"
+      class="center-image"
     />
     <p>
       Flowey's Time Machine is an unofficial save editor for Undertale. You can
@@ -84,6 +91,7 @@
       alt="undertale mods"
       width="300"
       height="225"
+      class="center-image"
     />
     <ul>
       <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> This is a online multplayer mod that works through Steam.</li>
@@ -92,3 +100,4 @@
     </ul>
   </body>
 </html>
+
