--- a/fanbase.html
+++ b/fanbase.html
@@ -28,6 +28,10 @@
         color: white;
         font-family: 'Determination';
       }
+      li {
+        color: white;
+        font-family: 'Determiantion';
+      }
       .center-image {
         display: block;
         margin-left: auto;
@@ -100,4 +104,5 @@
     </ul>
   </body>
 </html>
+
 
