--- a/fanbase.html
+++ b/fanbase.html
@@ -30,7 +30,7 @@
       }
       li {
         color: white;
-        font-family: 'Determiantion';
+        font-family: 'Determination';
       }
       .center-image {
         display: block;
@@ -104,5 +104,6 @@
     </ul>
   </body>
 </html>
+
 
 
