--- a/fanbase.html
+++ b/fanbase.html
@@ -78,13 +78,15 @@
     </p>
     <p>&nbsp;</p>
     <h2>Flowey's Time Machine</h2>
+    <div class="center-row">
     <img
-      src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmIis1prHthRjhPa99Gzbj1jQjVRdD8-8RAA&s"
-      alt="flowey's time machine"
-      width="290"
-      height="230"
-      class="center-image"
-    />
+        src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmIis1prHthRjhPa99Gzbj1jQjVRdD8-8RAA&s"
+        alt="flowey's time machine"
+        width="290"
+        height="230"
+        class="center-image"
+      />
+    </div>
     <p>
       Flowey's Time Machine is an unofficial save editor for Undertale. You can
       change multiple aspects of your save file and even generate new ones. The
@@ -93,13 +95,15 @@
     </p>
     <p>&nbsp;</p>
     <h2>Undertale mods</h2>
-    <img
-      src="https://i.redd.it/cisd1u06e3t11.png"
-      alt="undertale mods"
-      width="300"
-      height="225"
-      class="center-image"
-    />
+    <div class="center-row">
+      <img
+        src="https://i.redd.it/cisd1u06e3t11.png"
+        alt="undertale mods"
+        width="300"
+        height="225"
+        class="center-image"
+      />
+    </div>
     <ul>
       <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> This is a online multplayer mod that works through Steam.</li>
       <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> This mod adds color to the original black and white sprites. It adds a nice touch.</li>
@@ -107,4 +111,5 @@
     </ul>
   </body>
 </html>
+
 
