--- a/fanbase.html
+++ b/fanbase.html
@@ -80,6 +80,8 @@
     <h2>Flowey's Time Machine</h2>
     <div class="center-row">
     <img
+    <div class="center-row">
+      <img
         src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQmIis1prHthRjhPa99Gzbj1jQjVRdD8-8RAA&s"
         alt="flowey's time machine"
         width="290"
@@ -111,5 +113,6 @@
     </ul>
   </body>
 </html>
+
 
 
