Fix HTML structure and add missing elements

--- a/fanbase.html
+++ b/fanbase.html
@@ -28,6 +28,10 @@
         color: white;
         font-family: 'Determination';
       }
+      li {
+        color: white
+        font-family: 'Determination'
+      }
       .center-row {
         display: flex;
         justify-content: center;   /* centers horizontally */
@@ -107,12 +111,13 @@
       />
     </div>
     <ul>
-      <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> This is a online multplayer mod that works through Steam.</li>
-      <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> This mod adds color to the original black and white sprites. It adds a nice touch.</li>
-      <li><a href="https://www.romhacking.net/utilities/704">Delta Patcher</a> This is not really a mod, but a tool to help install them.</li>
+      <li><a href="https://landimizer.itch.io/ut-connect">Undertale Connect</a> - This is a online multplayer mod that works through Steam.</li>
+      <li><a href="https://www.moddb.com/mods/na29410/downloads/na134952">Colored Sprites</a> - This mod adds color to the original black and white sprites. It adds a nice touch.</li>
+      <li><a href="https://www.romhacking.net/utilities/704">Delta Patcher</a> - This is not really a mod, but a tool to help install them.</li>
     </ul>
   </body>
 </html>
+
 
 
 
