--- a/fanbase.html
+++ b/fanbase.html
@@ -29,7 +29,7 @@
         font-family: 'Determination';
       }
       li {
-        color: white
+        color: white;
         font-family: 'Determination'
       }
       .center-row {
@@ -117,6 +117,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
