--- a/info.html
+++ b/info.html
@@ -30,8 +30,31 @@
 		ul {
   			list-style-type: none;
 		}
+		nav { 
+		      background-color: #1f1f1f;
+		      padding: 1rem 2rem; display: flex;
+		      justify-content: space-between;
+		      align-items: center;
+		}
+	    nav a { 
+		      color: white;
+		      text-decoration: none;
+		      margin-left: 1.5rem;
+		      font-weight: 600;
+	    }
+	    nav a:hover { 
+	      opacity: 0.7;
+	    }
     </style>
-    <h1 style="text-align:left"> <a href="index.html"><img src="backArrow.png" width="50" height="50"></a></h1>
+	<nav>
+    	<div style="color:white;font-weight:bold;">THR-1000</div>
+    	<div>
+      		<a href='/'>Home</a>
+      		<a href='/engineering'>The Engineering</a>
+      		<a href='/testimonials'>Reviews</a>
+      		<a href='/buy'>Buy Now</a>
+    	</div>
+  	</nav>
     <h1 style="text-align:center">Information
     <body>
         <p>
@@ -134,6 +157,7 @@
 
     </body>
 </html>
+
 
 
 
