--- a/info.html
+++ b/info.html
@@ -47,12 +47,13 @@
 	    }
     </style>
 	<nav>
-    	<div style="color:white;font-weight:bold;">THR-1000</div>
+    	<div style="color:white;font-weight:bold;">UNDERTALE</div>
     	<div>
       		<a href='/'>Home</a>
-      		<a href='/engineering'>The Engineering</a>
-      		<a href='/testimonials'>Reviews</a>
-      		<a href='/buy'>Buy Now</a>
+			<a href='/'>Fanbase/a>
+      		<a href='/engineering'>Information</a>
+      		<a href='/testimonials'>Official Website</a>
+      		<a href='/buy'>Copyright</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -157,6 +158,7 @@
 
     </body>
 </html>
+
 
 
 
