--- a/info.html
+++ b/info.html
@@ -53,7 +53,7 @@
 			<a href='/'>Fanbase/a>
       		<a href='/engineering'>Information</a>
       		<a href='/testimonials'>Official Website</a>
-      		<a href='/buy'>Copyright</a>
+      		<a href='/a'>Copyright</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -158,6 +158,7 @@
 
     </body>
 </html>
+
 
 
 
