--- a/info.html
+++ b/info.html
@@ -50,7 +50,7 @@
     	<div style="color:white;font-weight:bold;">UNDERTALE</div>
     	<div>
       		<a href='/'>Home</a>
-			<a href='/'>Fanbase/a>
+			<a href='/'>Fanbase</a>
       		<a href='/engineering'>Information</a>
       		<a href='/testimonials'>Official Website</a>
       		<a href='/a'>Copyright</a>
@@ -158,3 +158,4 @@
 
     </body>
 </html>
+
