--- a/info.html
+++ b/info.html
@@ -35,6 +35,7 @@
 		      padding: 1rem 2rem; display: flex;
 		      justify-content: space-between;
 		      align-items: center;
+			  font-family: 'Determination';
 		}
 	    nav a { 
 		      color: white;
@@ -158,4 +159,5 @@
 
     </body>
 </html>
+
 
