--- a/info.html
+++ b/info.html
@@ -42,6 +42,7 @@
 		      text-decoration: none;
 		      margin-left: 1.5rem;
 		      font-weight: 600;
+			  font-family: 'Determination';
 	    }
 	    nav a:hover { 
 	      opacity: 0.7;
@@ -159,5 +160,6 @@
 
     </body>
 </html>
+
 
 
