--- a/info.html
+++ b/info.html
@@ -51,11 +51,11 @@
 	<nav>
     	<div style="color:white;font-weight:bold;">UNDERTALE</div>
     	<div>
-      		<a href='/'>Home</a>
-			<a href='/'>Fanbase</a>
-      		<a href='/engineering'>Information</a>
-      		<a href='/testimonials'>Official Website</a>
-      		<a href='/a'>Copyright</a>
+      		<a href='index.html'>Home</a>
+			<a href='fanbase.html'>Fanbase</a>
+      		<a href='info.html'>Information</a>
+      		<a href='undertale.com'>Official Website</a>
+      		<a href='copyright.html'>Copyright</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -160,6 +160,7 @@
 
     </body>
 </html>
+
 
 
 
