--- a/info.html
+++ b/info.html
@@ -8,6 +8,8 @@
 		}
         body {
             background-color: #070620;
+			margin: 0;
+      		padding: 0;
         }
         
         h1 {
@@ -160,6 +162,7 @@
 
     </body>
 </html>
+
 
 
 
