--- a/info.html
+++ b/info.html
@@ -57,7 +57,7 @@
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
       		<a href='undertale.com'>Official Website</a>
-      		<a href='copyright.html'>Copyright</a>
+      		<a href='/copyright'>Copyright</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -162,6 +162,7 @@
 
     </body>
 </html>
+
 
 
 
