Fix HTML structure and content formatting

--- a/info.html
+++ b/info.html
@@ -56,8 +56,8 @@
       		<a href='index.html'>Home</a>
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
-      		<a href='undertale.com'>Official Website</a>
-      		<a href='/copyright'>Copyright</a>
+      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='copyright'>Copyright</a>
     	</div>
   	</nav>
     <h1 style="text-align:center">Information
@@ -162,6 +162,7 @@
 
     </body>
 </html>
+
 
 
 
