Enhance copyright.html with navigation and updates
Added a navigation bar and updated copyright information.

--- a/copyright.html
+++ b/copyright.html
@@ -24,8 +24,35 @@
       color: white;
       font-family: "Determination";
     }
+	nav { 
+		    background-color: #1f1f1f;
+		    padding: 1rem 2rem; display: flex;
+		    justify-content: space-between;
+		    align-items: center;
+			font-family: 'Determination';
+		}
+	nav a { 
+		    color: white;
+		    text-decoration: none;
+		    margin-left: 1.5rem;
+		    font-weight: 600;
+			font-family: 'Determination';
+	    }
+	nav a:hover { 
+	      opacity: 0.7;
+	    }
   </style>
   <title>UNDERTALE</title>
+  <nav>
+    	<div style="color:white;font-weight:bold;">UNDERTALE</div>
+    	<div>
+      		<a href='index.html'>Home</a>
+			<a href='fanbase.html'>Fanbase</a>
+      		<a href='info.html'>Information</a>
+      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='copyright'>Copyright</a>
+    	</div>
+  	</nav>
   <body>
     <h1 style="text-align: left">
       <a href="index.html"
@@ -115,5 +142,6 @@
     </p>
   </body>
 </html>
+
 
 
