--- a/fanbase.html
+++ b/fanbase.html
@@ -9,6 +9,8 @@
       }
       body {
         background-color: #070620;
+        margin: 0;
+        padding: 0;
       }
 
       h1 {
@@ -42,17 +44,37 @@
         margin: 1em 0;
         float: none;
       }
+
+      nav { 
+        background-color: #1f1f1f; 
+        padding: 1rem 2rem; display: flex; 
+        justify-content: space-between; 
+        align-items: center; 
+      }
+
+      nav a { 
+        color: white;
+        text-decoration: none;
+        margin-left: 1.5rem;
+        font-weight: 600;
+      }
+
+      nav a:hover { 
+        opacity: 0.7; 
+      }
     </style>
   </head>
   <body>
+    <nav>
+    <div style="color:white;font-weight:bold;">THR-1000</div>
+      <div>
+        <a href='/'>Home</a>
+        <a href='/engineering'>The Engineering</a>
+        <a href='/testimonials'>Reviews</a>
+        <a href='/buy'>Edit this</a>
+      </div>
+    </nav>
     <h1 style="text-align: left">
-      <a href="index.html"
-        ><img
-          src="backArrow.png"
-          alt="back"
-          width="50"
-          height="50"
-      /></a>
     </h1>
     <h1 style="text-align: center">Fanbase</h1>
 
@@ -117,6 +139,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
