--- a/fanbase.html
+++ b/fanbase.html
@@ -65,15 +65,16 @@
     </style>
   </head>
   <body>
-    <nav>
-    <div style="color:white;font-weight:bold;">THR-1000</div>
-      <div>
-        <a href='/'>Home</a>
-        <a href='/engineering'>The Engineering</a>
-        <a href='/testimonials'>Reviews</a>
-        <a href='/buy'>Edit this</a>
-      </div>
-    </nav>
+  	<nav>
+      	<div style="color:white;font-weight:bold;">UNDERTALE</div>
+      	<div>
+        		<a href='index.html'>Home</a>
+  			    <a href='fanbase.html'>Fanbase</a>
+        		<a href='info.html'>Information</a>
+        		<a href='https://undertale.com'>Official Website</a>
+        		<a href='copyright'>Copyright</a>
+      	</div>
+    	</nav>
     <h1 style="text-align: left">
     </h1>
     <h1 style="text-align: center">Fanbase</h1>
@@ -139,6 +140,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
