--- a/copyright.html
+++ b/copyright.html
@@ -50,7 +50,7 @@
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
       		<a href='https://undertale.com'>Official Website</a>
-      		<a href='copyright'>Copyright</a>
+      		<a href='copyright.html'>Copyright</a>
     	</div>
   	</nav>
   <body>
@@ -137,6 +137,7 @@
     </p>
   </body>
 </html>
+
 
 
 
