--- a/fanbase.html
+++ b/fanbase.html
@@ -46,10 +46,11 @@
       }
 
       nav { 
-        background-color: #1f1f1f; 
-        padding: 1rem 2rem; display: flex; 
-        justify-content: space-between; 
-        align-items: center; 
+        background-color: #1f1f1f;
+        padding: 1rem 2rem; display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-family: 'Determination';
       }
 
       nav a { 
@@ -57,10 +58,11 @@
         text-decoration: none;
         margin-left: 1.5rem;
         font-weight: 600;
+        font-family: 'Determination';
       }
 
       nav a:hover { 
-        opacity: 0.7; 
+        opacity: 0.7;
       }
     </style>
   </head>
@@ -140,6 +142,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
