--- a/copyright.html
+++ b/copyright.html
@@ -7,6 +7,8 @@
 		}
     body {
       background-color: rgb(7, 6, 32);
+      margin: 0;
+      padding: 0;
     }
     h1 {
       color: white;
@@ -137,6 +139,7 @@
     </p>
   </body>
 </html>
+
 
 
 
