Add audio controls for UNDERTALE theme
Added audio controls for the UNDERTALE theme song.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,10 @@
 <html>
 	<title>UNDERTALE</title>
+	<audio controls>
+  		<source src="UNDERTALE_title.mp3" type="audio/mpeg">
+  		Your browser does not support the audio element.
+	</audio>
+
 	<style>
 		@font-face {
     		font-family: Determination;
@@ -33,10 +38,6 @@
 	<h1 style="text-align:center">UNDERTALE
 	<body>
 		<h3 style="text-align:center">Undertale is an amazing indie RPG made by Toby Fox in 2015.
-		<audio autoplay loop>
-  			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
-  			Your browser does not support audio.
-		</audio>
 		<p>
 		<img src="https://i.redd.it/7ox1et0f5t3f1.png" alt="frisk" 
 		   width="200" height="220">
@@ -56,6 +57,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
