--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <html>
 	<title>UNDERTALE</title>
-	<audio controls>
+	<audio autoplay loop>
   		<source src="UNDERTALE_title.mp3" type="audio/mpeg">
-  		Your browser does not support the audio element.
-	</audio>
+ 		Your browser does not support the audio element.
+		</audio>
 
 	<style>
 		@font-face {
@@ -57,6 +57,7 @@
 		</ul>
 	</body>
 </html>
+
 
 
 
