--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <html>
 	<title>UNDERTALE</title>
-	<audio autoplay loop>
-  		<source src="UNDERTALE_title.mp3" type="audio/mpeg">
- 		Your browser does not support the audio element.
-		</audio>
 
 	<style>
 		@font-face {
@@ -55,8 +51,14 @@
 			<li style="text-align:center"><a href="copyright.html">Copyright</a></li>
 
 		</ul>
+
+		<audio controls loop>
+  			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
+ 			Your browser does not support the audio element.
+		</audio>
 	</body>
 </html>
+
 
 
 
