--- a/index.html
+++ b/index.html
@@ -51,13 +51,14 @@
 			<li style="text-align:center"><a href="copyright.html">Copyright</a></li>
 
 		</ul>
-
+		<h3 style="text-align: centre">
 		<audio controls loop>
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
