--- a/index.html
+++ b/index.html
@@ -52,12 +52,13 @@
 
 		</ul>
 		<h3 style="text-align: centre">
-		<audio controls loop>
+		<audio controls loop width="200" height="50">
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
