--- a/index.html
+++ b/index.html
@@ -29,6 +29,10 @@
 		ul {
   			list-style-type: none;
 		}
+		audio {
+				width: "200";
+		
+		}
 
 	</style>
 	<h1 style="text-align:center">UNDERTALE
@@ -52,12 +56,13 @@
 
 		</ul>
 		<h3 style="text-align: centre">
-		<audio controls loop width="200" height="50">
+		<audio controls loop>
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
