--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   			list-style-type: none;
 		}
 		audio {
-				width: "200";
+				width: 50;
 		
 		}
 
@@ -62,6 +62,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
