--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 		}
 		audio {
 				width: 50;
-		
+				display: block;
 		}
 
 	</style>
@@ -62,6 +62,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
