--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   			list-style-type: none;
 		}
 		audio {
-				width: 50;
+				width: "50";
 				display: block;
 		}
 
@@ -62,6 +62,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
