--- a/index.html
+++ b/index.html
@@ -29,11 +29,6 @@
 		ul {
   			list-style-type: none;
 		}
-		audio {
-				width: "50";
-				display: block;
-		}
-
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
@@ -56,12 +51,13 @@
 
 		</ul>
 		<h3 style="text-align: centre">
-		<audio controls loop>
+		<audio controls="" loop="">
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
