--- a/index.html
+++ b/index.html
@@ -51,12 +51,13 @@
 
 		</ul>
 		<h3 style="text-align: centre">
-		<audio controls="" loop="">
+		<audio controls loop>
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
