--- a/index.html
+++ b/index.html
@@ -29,9 +29,13 @@
 		ul {
   			list-style-type: none;
 		}
+		nav { text-align: center;
+			 overflow: hidden;
+		}
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
+		<nav>
 		<h3 style="text-align:center">Undertale is an amazing indie RPG made by Toby Fox in 2015.
 		<p>
 		<img src="https://i.redd.it/7ox1et0f5t3f1.png" alt="frisk" 
@@ -50,6 +54,7 @@
 			<li style="text-align:center"><a href="copyright.html">Copyright</a></li>
 
 		</ul>
+		</nav>
 		<h3 style="text-align: centre">
 		<audio controls loop>
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
@@ -57,6 +62,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
