--- a/index.html
+++ b/index.html
@@ -46,10 +46,10 @@
 		<img src="https://www.pngkey.com/png/full/797-7974054_image-warriorstale-undyne-spritepng-undertale-au-wiki-undertale.png" alt="undyne" 
 		   width="140" height="220">
 		<ul>
-			<li style="text-align:center"><a href="https://undertale.com/">Official Website</a></li>
-			<li style="text-align:center"><a href="info.html">Learn more</a></li>
-			<li style="text-align:center"><a href="fanbase.html">Fanbase</a></li>
-			<li style="text-align:center"><a href="copyright.html">Copyright</a></li>
+			<li><a href="https://undertale.com/">Official Website</a></li>
+			<li><a href="info.html">Learn more</a></li>
+			<li><a href="fanbase.html">Fanbase</a></li>
+			<li><a href="copyright.html">Copyright</a></li>
 			
 		</ul>
 		<h3 style="text-align: centre">
@@ -59,6 +59,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
