--- a/index.html
+++ b/index.html
@@ -29,8 +29,7 @@
 		ul {
   			list-style-type: none;
 		}
-		nav { text-align: center;
-			 overflow: hidden;
+		li { text-align: left;
 		}
 	</style>
 	<h1 style="text-align:center">UNDERTALE
@@ -59,6 +58,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
