--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
 		   width="205" height="220">
 		<img src="https://www.pngkey.com/png/full/797-7974054_image-warriorstale-undyne-spritepng-undertale-au-wiki-undertale.png" alt="undyne" 
 		   width="140" height="220">
+		<h2>
 		<ul>
 			<li><a href="https://undertale.com/">Official Website</a></li>
 			<li><a href="info.html">Learn more</a></li>
@@ -49,6 +50,13 @@
 			<li><a href="copyright.html">Copyright</a></li>
 			
 		</ul>
+		</h2>
+			<p>&nbsp
+			<p>&nbsp
+			<p>&nbsp
+			<p>&nbsp
+			<p>&nbsp
+			<p>&nbsp
 		<h3 style="text-align: centre">
 		<audio controls loop>
   			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
@@ -56,6 +64,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
