--- a/index.html
+++ b/index.html
@@ -29,6 +29,33 @@
 		ul {
   			list-style-type: none;
 		}
+		nav { 
+		      background-color: #1f1f1f;
+		      padding: 1rem 2rem; display: flex;
+		      justify-content: space-between;
+		      align-items: center;
+			  font-family: 'Determination';
+		}
+	    nav a { 
+		      color: white;
+		      text-decoration: none;
+		      margin-left: 1.5rem;
+		      font-weight: 600;
+			  font-family: 'Determination';
+	    }
+	    nav a:hover { 
+	      opacity: 0.7;
+	    }
+	<nav>
+    	<div style="color:white;font-weight:bold;">UNDERTALE</div>
+    	<div>
+      		<a href='index.html'>Home</a>
+			<a href='fanbase.html'>Fanbase</a>
+      		<a href='info.html'>Information</a>
+      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='copyright.html'>Copyright</a>
+    	</div>
+  	</nav>
 	</style>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
@@ -64,6 +91,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
