--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 		}
 		body {
 			background-color: #070620;
+			margin: 0;
+      		padding: 0;
 		}
 		h1 {
 			color: white;
@@ -70,13 +72,6 @@
 		<img src="https://www.pngkey.com/png/full/797-7974054_image-warriorstale-undyne-spritepng-undertale-au-wiki-undertale.png" alt="undyne" 
 		   width="140" height="220">
 		<h2>
-		<ul>
-			<li><a href="https://undertale.com/">Official Website</a></li>
-			<li><a href="info.html">Learn more</a></li>
-			<li><a href="fanbase.html">Fanbase</a></li>
-			<li><a href="copyright.html">Copyright</a></li>
-			
-		</ul>
 		</h2>
 			<p>&nbsp
 			<p>&nbsp
@@ -91,6 +86,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
