Updated Undertale description in index.html

--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
   	</nav>
 	<h1 style="text-align:center">UNDERTALE
 	<body>
-		<h3 style="text-align:center">Undertale is an amazing indie RPG made by Toby Fox in 2015.
+		<h3 style="text-align:center">Undertale is an amazing indie RPG created by Toby Fox and released in 2015.
+			It stands out for its memorable characters, and the freedom of choice you have as a player.
+			Because of its beautiful pixel art style and amazing lore, Undertale remains one of the most loved games in the world.
 		<p>
 		<img src="https://i.redd.it/7ox1et0f5t3f1.png" alt="frisk" 
 		   width="200" height="220">
@@ -86,6 +88,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
