--- a/info.html
+++ b/info.html
@@ -56,7 +56,7 @@
       		<a href='index.html'>Home</a>
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
-      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
     	</div>
   	</nav>
@@ -162,6 +162,7 @@
 
     </body>
 </html>
+
 
 
 
