--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
       		<a href='index.html'>Home</a>
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
-      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
     	</div>
   	</nav>
@@ -88,6 +88,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
