--- a/fanbase.html
+++ b/fanbase.html
@@ -36,7 +36,7 @@
       }
       .center-row {
         display: flex;
-        justify-content: center;   /* centers horizontally */
+        justify-content: center;
       }
 
       .center-image {
@@ -73,7 +73,7 @@
         		<a href='index.html'>Home</a>
   			    <a href='fanbase.html'>Fanbase</a>
         		<a href='info.html'>Information</a>
-        		<a href='https://undertale.com'>Official Website</a>
+        		<a href='https://undertale.com' target="_blank">Official Website</a>
         		<a href='copyright'>Copyright</a>
       	</div>
     	</nav>
@@ -142,6 +142,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
