--- a/copyright.html
+++ b/copyright.html
@@ -51,7 +51,7 @@
       		<a href='index.html'>Home</a>
 			<a href='fanbase.html'>Fanbase</a>
       		<a href='info.html'>Information</a>
-      		<a href='https://undertale.com'>Official Website</a>
+      		<a href='https://undertale.com' target="_blank">Official Website</a>
       		<a href='copyright.html'>Copyright</a>
     	</div>
   	</nav>
@@ -139,6 +139,7 @@
     </p>
   </body>
 </html>
+
 
 
 
