fixed bugs in fanbase.html

--- a/fanbase.html
+++ b/fanbase.html
@@ -74,7 +74,7 @@
   			    <a href='fanbase.html'>Fanbase</a>
         		<a href='info.html'>Information</a>
         		<a href='https://undertale.com' target="_blank">Official Website</a>
-        		<a href='copyright'>Copyright</a>
+        		<a href='copyright.html'>Copyright</a>
       	</div>
     	</nav>
     <h1 style="text-align: left">
@@ -142,6 +142,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
