--- a/fanbase.html
+++ b/fanbase.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>UNDERTALE</title>
+		<link rel="icon" type="image/png" href="Firebolt62.png">
+    	<title>UNDERTALE</title>
+	</head>
     <style>
       @font-face {
         font-family: Determination;
@@ -142,6 +144,7 @@
     </ul>
   </body>
 </html>
+
 
 
 
