--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <html>
-	<title>UNDERTALE</title>
+	<head>
+		<link rel="icon" type="image/png" href="Firebolt62.png">
+    	<title>UNDERTALE</title>
+	</head>
 
 	<style>
 		@font-face {
@@ -88,6 +91,7 @@
 		</audio>
 	</body>
 </html>
+
 
 
 
