--- a/info.html
+++ b/info.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
-    <title>UNDERTALE</title>
+    <head>
+		<link rel="icon" type="image/png" href="Firebolt62.png">
+    	<title>UNDERTALE</title>
+	</head>
     <style>
 		@font-face {
     		font-family: Determination;
@@ -162,6 +165,7 @@
 
     </body>
 </html>
+
 
 
 
