--- a/copyright.html
+++ b/copyright.html
@@ -1,5 +1,9 @@
 <!DOCTYPE html>
 <html>
+	<head>
+		<link rel="icon" type="image/png" href="Firebolt62.png">
+    	<title>UNDERTALE</title>
+	</head>
   <style>
     @font-face {
     		font-family: Determination;
@@ -139,6 +143,7 @@
     </p>
   </body>
 </html>
+
 
 
 
