--- a/index.html
+++ b/index.html
@@ -86,11 +86,12 @@
 			<p>&nbsp
 		<h3 style="text-align: centre">
 		<audio controls loop>
-  			<source src="UNDERTALE_title.mp3" type="audio/mpeg">
+  			<source src="undertaleTitle.mp3" type="audio/mpeg">
  			Your browser does not support the audio element.
 		</audio>
 	</body>
 </html>
+
 
 
 
